--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello World!
+<iframe src="https://editor.godotengine.org/releases/4.0.stable/godot.editor.html" height=100% width=100% title="GodotEditor"></iframe>
