--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://editor.godotengine.org/releases/4.0.stable/godot.editor.html" style="border:none;" height=100% width=100% title="GodotEditor"></iframe>
+Hello Kozy!
